# chatServer

./: .clang-format  .gitignore  CMakeLists.txt  README.en.md  README.md  build.sh  chat.sql
.VSCodeCounter/2023-07-17_22-52-09/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
conf/: database.conf
include/: baseVersion.h  chatBusiness.h  chatNetworkLayer.h  chatServer.h  distributor.h  errorEvent.h  msgType.h  muduoPublic.h  mysqlConnPool.h  networkService.h  package.h
include/db/: ConnectPool.h  Group.hpp  MysqlDataBase.h  friendModel.h  groupUser.hpp  groupUserModel.h  user.h  userModel.h
include/model/: Group.hpp  friendModel.h  groupUser.hpp  groupUserModel.h  messageModel.h  offLineMessage.h  userModel.h
src/: CMakeLists.txt
src/base/: errorEvent.h  group.hpp  group_user.hpp  msgType.h  network_service.hpp  package.cpp  package.h  user.h
src/client/: CMakeLists.txt  chat_session.cpp  chat_session.h  main.cpp  tcp_client.cpp  tcp_client.h
src/public/: error_event.h  group.hpp  group_user.hpp  msg_type.h  network_service.hpp  package.cpp  package.h  user.h
src/server/: CMakeLists.txt  chatBusiness.cpp  chatNetworkLayer.cpp  chatServer.cpp  chatServer.h  chat_server.cpp  chat_server.h  chat_session.cpp  chat_session.h  distributor.cpp  main.cpp  mysqlConnPool.cpp  tcp_service.cpp  tcp_service.h
src/server/db/: ConnectPool.cpp  MysqlDataBase.cpp  connect_pool.cpp  connect_pool.h  friendModel.cpp  groupUserModel.cpp  messageModel.cpp  mysql_database.cpp  mysql_database.h  userModel.cpp
src/server/model/: friendModel.cpp  friend_model.cpp  friend_model.h  groupUserModel.cpp  group_user_model.cpp  group_user_model.h  messageModel.cpp  offline_message.h  offline_message_model.cpp  offline_message_model.h  userModel.cpp  user_model.cpp  user_model.h
src/server/redis/: redis_route.cpp  redis_route.h
